add README.md file

--- a/vmstat_flume_kafka.conf
+++ b/vmstat_flume_kafka.conf
@@ -5,20 +5,19 @@ agt.sinks = execSink
 
 # define the source
 agt.sources.execSource.type = exec 
-agt.sources.execSource.command = vmstat 2
+agt.sources.execSource.command = vmstat 1
 agt.sources.execSource.channels = execChannel
 
 # define the sink 
-# kafka bootstrap server needs to be reset
 agt.sinks.execSink.channel = execChannel 
 agt.sinks.execSink.type = org.apache.flume.sink.kafka.KafkaSink
 agt.sinks.execSink.kafka.topic = exec 
 
-agt.sinks.execSink.kafka.bootstrap.servers=cxln2.c.thelab-240901.internal:6667, cxln3.c.thelab-240901.internal:6667, cxln4.c.thelab-240901.internal:6667
+agt.sinks.execSink.kafka.bootstrap.servers=localhost:9092
 
-agt.sinks.execSink.kafka.flumeBatchSize = 100
+agt.sinks.execSink.kafka.flumeBatchSize = 500
 agt.sinks.execSink.kafka.producer.acks = 1
-agt.sinks.execSink.kafka.producer.linger.ms = 1
+agt.sinks.execSink.kafka.producer.linger.ms = 5000
 agt.sinks.execSink.kafka.producer.compression.type = snappy
 
 # Describing/Configuring the channel 
