fix error in the flume agent file and the bash

--- a/vmstat_flume_kafka.conf
+++ b/vmstat_flume_kafka.conf
@@ -25,10 +25,11 @@ agt.sources.execSource.channels = execChannel
 # producer needs acknowledgment from the broker
 # producer holds messages for 5 seconds before write
 # producer write messages compressed as Snappy format
+# the kafka is configured as single node multi-broker mode with 3 brokers as 9101, 9102, 9103
 agt.sinks.execSink.channel = execChannel 
 agt.sinks.execSink.type = org.apache.flume.sink.kafka.KafkaSink
 agt.sinks.execSink.kafka.topic = exec 
-agt.sinks.execSink.kafka.bootstrap.servers=localhost:9092
+agt.sinks.execSink.kafka.bootstrap.servers=localhost:9101
 agt.sinks.execSink.kafka.flumeBatchSize = 500
 agt.sinks.execSink.kafka.producer.acks = 1
 agt.sinks.execSink.kafka.producer.linger.ms = 5000
