edit properties file and test VmstatToConsolePipeline

--- a/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
+++ b/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
@@ -12,57 +12,43 @@
 #See the License for the specific language governing permissions and
 #limitations under the License.
 
-# pipeline selection
-# vmstat => flume => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
-# tweet_stream => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
-# covid19_batch_data => kafka producer => spark structured stream => console/ hdfs/ kafka producer
-pipeline.source = 'vmstat'
-pipeline.sink = 'console'
+#pipeline selection
+#vmstat => flume => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
+#tweet_stream => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
+#covid19_batch_data => kafka producer => spark structured stream => console/ hdfs/ kafka producer
+pipeline.source=vmstat
+pipeline.sink=console
 
 # spark session properties
-sparkSession.mode="local"
-sparkSession.app.name="elt_pipeline"
+sparkSession.mode=local
+sparkSession.app.name=elt_pipeline
 
 # kafka producer properties
-kafka.brokers="localhost:9101"
-kafka.topic.vmstat="exec"
-kafka.topic.vmstat_kafka"="toKafka"
-kafka.topic.tweet="tweet"
-kafka.topic.covid19="covidSummary"
-kafka.delimiter.covid19="&&&"
-kafka.delimiter.tweet="&&&&"
+kafka.brokers=localhost:9101
+kafka.topic.vmstat=exec
+kafka.topic.vmstat_kafka"=toKafka
+kafka.topic.tweet=tweet
+kafka.topic.covid19=covidSummary
+kafka.delimiter.covid19=&&&
+kafka.delimiter.tweet=&&&&
 
 # mysql properties
-mysql.url="..."
-mysql.driver="com.mysql.cj.jdbc.Driver"
-mysql.username="..."
-mysql.password="..."
-mysql.database="..."
-mysql.table.vmstat="..."
-mysql.table.tweet="..."
-mysql.write.mode="..."
+mysql.url=...
+mysql.driver=com.mysql.cj.jdbc.Driver
+mysql.username=...
+mysql.password=...
+mysql.database=...
+mysql.table.vmstat=...
+mysql.table.tweet=...
+mysql.write.mode=...
 
 # console write properties
-console.modeAppend="append"
-console.modeComplete="complete"
+console.write.mode=append
 
 # hdfs properties
-hdfs.Path="hdfs://localhost:9000/user/ky/data/stream_data/"
-hdfs.checkpointPath="hdfs://localhost:9000/user/ky/checkpoint/"
-hdfs.write.format="parquet"
-hdfs.write.mode="append"
-hdfs.write.compressionType="snappy"
+hdfs.Path=hdfs://localhost:9000/user/ky/data/stream_data/
+hdfs.checkpointPath=hdfs://localhost:9000/user/ky/checkpoint/
+hdfs.write.format=parquet
+hdfs.write.mode=append
+                                                                                      1,1           Top
 
-# hive properties
-hive.write.checkpointPath="hdfs://localhost:9000/user/ky/checkpoint/"
-hive.write.format="parquet"
-hive.write.mode="append"
-hive.write.compressionType="snappy"
-hive.metastore.database="chrisy"
-hive.metastore.table.vmstat="fromStream"
-hive.metastore.table.tweet="fromTweet"
-hive.partitions.number="1"
-
-# mongoDB properties
-mongo.InputURI="mongodb://127.0.0.1/test.fromstream",
-mongo.OutputURI="mongodb://127.0.0.1/test.fromstream"
