refactoring both covid19 and tweet to console pipeline and update the properties file

--- a/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
+++ b/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
@@ -12,11 +12,19 @@
 #See the License for the specific language governing permissions and
 #limitations under the License.
 
-#pipeline selection
+#to use any of the following pipeline, uncomment and define the pipeline.source and pipeline.sink
 #vmstat => flume => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
 #tweet_stream => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
 #covid19_batch_data => kafka producer => spark structured stream => console/ hdfs/ kafka producer
-pipeline.source=vmstat
+
+#"vmstat source" is manged by "Flume". check and run "start-vmstats-with-flume.sh" to start to source
+#pipeline.source=vmstat
+
+#"tweet stream" source is managed by "TwitterStreamToKafkaProducer" app. check and run "start-tweetStream-to-kafkaProducer.sh"
+#pipeline.source=tweet
+
+# "covid19 batch data" source is managed by the Apache Airflow DAG. check and run "covid19_data_pipeline.py" in Apache Airflow
+pipeline.source=covid
 pipeline.sink=console
 
 # spark session properties
