refactor vmstat and twitter to kafka pipeline

--- a/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
+++ b/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
@@ -18,14 +18,22 @@
 #covid19_batch_data => kafka producer => spark structured stream => console/ hdfs/ kafka producer
 
 #"vmstat source" is manged by "Flume". check and run "start-vmstats-with-flume.sh" to start to source
+#depends on the property "kafka.topic.vmstat", "kafka.topic.brokers"
 #pipeline.source=vmstat
 
 #"tweet stream" source is managed by "TwitterStreamToKafkaProducer" app. check and run "start-tweetStream-to-kafkaProducer.sh"
+#depends on the property "kafka.topic.tweet", "kafka.topic.brokers"
 #pipeline.source=tweet
 
-# "covid19 batch data" source is managed by the Apache Airflow DAG. check and run "covid19_data_pipeline.py" in Apache Airflow
-pipeline.source=covid
-pipeline.sink=console
+#"covid19 batch data" source is managed by the Apache Airflow DAG. check and run "covid19_data_pipeline.py" in Apache Airflow
+#depends on the property "kafka.topic.covid19", "kafka.topic.brokers"
+#pipeline.source=covid
+
+#"console" sink depends on the property "console.write.mode"
+#pipeline.sink=console
+
+# "kafka" sink depends on properties "kafka.topic.kafkaProducer"(the kafka sink topic), "kafka.topic.vmstat" (the kafka souce topic), "kafka.brokers"
+#pipeline.sink=kafka
 
 # spark session properties
 sparkSession.mode=local
@@ -34,11 +42,16 @@ sparkSession.app.name=elt_pipeline
 # kafka producer properties
 kafka.brokers=localhost:9101
 kafka.topic.vmstat=exec
-kafka.topic.vmstat_kafka"=toKafka
+kafka.topic.kafkaProducer=toKafka
 kafka.topic.tweet=tweet
 kafka.topic.covid19=covidSummary
-kafka.delimiter.covid19=&&&
-kafka.delimiter.tweet=&&&&
+
+# console write properties
+console.write.mode=append
+
+# mongoDB properties
+mongo.InputURI=mongodb://127.0.0.1/test.fromstream
+mongo.OutputURI=mongodb://127.0.0.1/test.fromstream
 
 # mysql properties
 mysql.url=...
@@ -50,13 +63,24 @@ mysql.table.vmstat=...
 mysql.table.tweet=...
 mysql.write.mode=...
 
-# console write properties
-console.write.mode=append
+
 
 # hdfs properties
 hdfs.Path=hdfs://localhost:9000/user/ky/data/stream_data/
 hdfs.checkpointPath=hdfs://localhost:9000/user/ky/checkpoint/
 hdfs.write.format=parquet
 hdfs.write.mode=append
-                                                                                      1,1           Top
+hdfs.write.compressionType=snappy
+
+# hive properties
+hive.write.checkpointPath=hdfs://localhost:9000/user/ky/checkpoint/
+hive.write.format=parquet
+hive.write.mode=append
+hive.write.compressionType=snappy
+hive.metastore.database=chrisy
+hive.metastore.table.vmstat=fromStream
+hive.metastore.table.tweet=fromTweet
+hive.partitions.number=1
+
+
 
