refactor vmstat and tweet stream to mysql pipeline and do the test

--- a/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
+++ b/KafkaSparkUnit/src/main/resrouces/kafka-spark-unit.properties
@@ -12,6 +12,10 @@
 #See the License for the specific language governing permissions and
 #limitations under the License.
 
+# spark session properties
+sparkSession.mode=local
+sparkSession.app.name=elt_pipeline
+
 #to use any of the following pipeline, uncomment and define the pipeline.source and pipeline.sink
 #vmstat => flume => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
 #tweet_stream => kafka producer => spark structured stream => console/ hdfs/ hive table/ kafka producer/ mongoDB/ mySQL
@@ -23,7 +27,7 @@
 
 #"tweet stream" source is managed by "TwitterStreamToKafkaProducer" app. check and run "start-tweetStream-to-kafkaProducer.sh"
 #depends on the property "kafka.topic.tweet", "kafka.topic.brokers"
-#pipeline.source=tweet
+pipeline.source=tweet
 
 #"covid19 batch data" source is managed by the Apache Airflow DAG. check and run "covid19_data_pipeline.py" in Apache Airflow
 #depends on the property "kafka.topic.covid19", "kafka.topic.brokers"
@@ -32,12 +36,11 @@
 #"console" sink depends on the property "console.write.mode"
 #pipeline.sink=console
 
+# console write properties
+console.write.mode=append
+
 # "kafka" sink depends on properties "kafka.topic.kafkaProducer"(the kafka sink topic), "kafka.topic.vmstat" (the kafka souce topic), "kafka.brokers"
 #pipeline.sink=kafka
-
-# spark session properties
-sparkSession.mode=local
-sparkSession.app.name=elt_pipeline
 
 # kafka producer properties
 kafka.brokers=localhost:9101
@@ -46,15 +49,11 @@ kafka.topic.kafkaProducer=toKafka
 kafka.topic.tweet=tweet
 kafka.topic.covid19=covidSummary
 
-# console write properties
-console.write.mode=append
-
-# mongoDB properties
-mongo.InputURI=mongodb://127.0.0.1/test.fromstream
-mongo.OutputURI=mongodb://127.0.0.1/test.fromstream
+#"mysql" sink depends on all mysql properties
+pipeline.sink=mysql
 
 # mysql properties
-mysql.url=...
+mysql.url=jdbc:mysql://localhost:3306
 mysql.driver=com.mysql.cj.jdbc.Driver
 mysql.username=...
 mysql.password=...
@@ -63,7 +62,9 @@ mysql.table.vmstat=...
 mysql.table.tweet=...
 mysql.write.mode=...
 
-
+# mongoDB properties
+mongo.InputURI=mongodb://127.0.0.1/test.fromstream
+mongo.OutputURI=mongodb://127.0.0.1/test.fromstream
 
 # hdfs properties
 hdfs.Path=hdfs://localhost:9000/user/ky/data/stream_data/
